// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with description 1`] = `
<div
  className="rs-panel rs-panel-default"
>
  <div
    className="rs-panel-heading"
    onClick={[Function]}
    role="rowheader"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      First forum
    </h3>
  </div>
  <div
    className="rs-panel-body"
  >
    <div
      className="rs-content"
    >
      <p>
        Forum description.
      </p>
      <hr />
    </div>
  </div>
</div>
`;

exports[`Renders with nothing 1`] = `
<div
  className="rs-panel rs-panel-default"
>
  <div
    className="rs-panel-heading"
    onClick={[Function]}
    role="rowheader"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      First forum
    </h3>
  </div>
  <div
    className="rs-panel-body"
  >
    <div
      className="rs-content"
    />
  </div>
</div>
`;
